# image-search

./: .gitignore  README.md  app.py  explore.ipynb  main.py  offline_embed-index_s2.ipynb  offline_embed_s1.ipynb  offline_index_s3.ipynb  pyproject.toml  run_s1.ipynb  search_s1.ipynb  search_s2.ipynb  test_s1.ipynb  training_s1.ipynb  unsplash.ipynb  unsplash_dataset.ipynb  unsplash_dataset_final.ipynb  unsplash_dataset_hnsw.ipynb  unsplash_dataset_load.ipynb  unsplash_final_load.ipynb  unsplash_hnsw.ipynb  unsplash_load.ipynb  unsplash_test.ipynb  web_app.py
data/: metadata_hnsw.csv
frontend/: index.html  script.js  styles.css
models/: embedder.py
src/: index.py  index_builder.py  search.py  utils.py
