[project]
name = "image-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "streamlit>=1.55.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
